re-update project structure